--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -268,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "metadata": {},
+   "metadata": {
+    "hide": true
+   },
    "outputs": [
     {
      "data": {
@@ -314,6 +316,7 @@
    "cell_type": "code",
    "execution_count": 265,
    "metadata": {
+    "hide": true,
     "scrolled": true
    },
    "outputs": [
@@ -360,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "hide": true
+   },
    "outputs": [
     {
      "data": {
@@ -409,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {},
+   "metadata": {
+    "hide": true
+   },
    "outputs": [
     {
      "data": {
@@ -455,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "hide": true
+   },
    "outputs": [
     {
      "data": {
@@ -533,13 +542,6 @@
     "X = 'avg_cur_bal'\n",
     "EDA_attr(X)\n",
     "scale_attr(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2C. Credit History Information (54)"
    ]
   },
   {
