Rename Ethical Implications

--- a/notebooks/EthicalImplications.ipynb
+++ b/notebooks/EthicalImplications.ipynb
@@ -1017,10 +1017,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>emp_length</th>\n",
+       "      <th>accepted</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>Asian</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Married_couple_child_under_18_pct</th>\n",
+       "      <th>Married_couple_no_child_under_18_pct</th>\n",
+       "      <th>Single_parent_families_pct</th>\n",
+       "      <th>Single_parent_child_under_18_pct</th>\n",
+       "      <th>Single_parent_no_child_under_18_pct</th>\n",
+       "      <th>Non_families_pct</th>\n",
+       "      <th>Householder_living_alone_pct</th>\n",
+       "      <th>Householder_living_with_unrelated_pct</th>\n",
+       "      <th>Occupied_pct</th>\n",
+       "      <th>Household_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>27.650000</td>\n",
+       "      <td>860xx</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>184274.000000</td>\n",
+       "      <td>85837.000000</td>\n",
+       "      <td>2391.000000</td>\n",
+       "      <td>64344.000000</td>\n",
+       "      <td>2553.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.424996</td>\n",
+       "      <td>26.521836</td>\n",
+       "      <td>22.213048</td>\n",
+       "      <td>11.061802</td>\n",
+       "      <td>11.151246</td>\n",
+       "      <td>34.840119</td>\n",
+       "      <td>23.614910</td>\n",
+       "      <td>11.225209</td>\n",
+       "      <td>0.747368</td>\n",
+       "      <td>3.169651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2500.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>309xx</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>204347.000000</td>\n",
+       "      <td>91932.000000</td>\n",
+       "      <td>92769.000000</td>\n",
+       "      <td>283.000000</td>\n",
+       "      <td>5308.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.838156</td>\n",
+       "      <td>24.570782</td>\n",
+       "      <td>24.387649</td>\n",
+       "      <td>12.528446</td>\n",
+       "      <td>11.859203</td>\n",
+       "      <td>38.203412</td>\n",
+       "      <td>32.716157</td>\n",
+       "      <td>5.487255</td>\n",
+       "      <td>0.829328</td>\n",
+       "      <td>2.751666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2400.000000</td>\n",
+       "      <td>8.720000</td>\n",
+       "      <td>606xx</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2697610.000000</td>\n",
+       "      <td>875093.000000</td>\n",
+       "      <td>822035.000000</td>\n",
+       "      <td>3193.000000</td>\n",
+       "      <td>163025.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.999956</td>\n",
+       "      <td>18.663649</td>\n",
+       "      <td>21.527478</td>\n",
+       "      <td>10.097242</td>\n",
+       "      <td>11.430236</td>\n",
+       "      <td>45.808917</td>\n",
+       "      <td>36.493490</td>\n",
+       "      <td>9.315426</td>\n",
+       "      <td>0.873162</td>\n",
+       "      <td>2.602140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>917xx</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1977114.000000</td>\n",
+       "      <td>393027.000000</td>\n",
+       "      <td>72504.000000</td>\n",
+       "      <td>4702.000000</td>\n",
+       "      <td>452147.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.276769</td>\n",
+       "      <td>30.612848</td>\n",
+       "      <td>23.172234</td>\n",
+       "      <td>9.575353</td>\n",
+       "      <td>13.596881</td>\n",
+       "      <td>21.938149</td>\n",
+       "      <td>17.238609</td>\n",
+       "      <td>4.699540</td>\n",
+       "      <td>0.948437</td>\n",
+       "      <td>3.499106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3000.000000</td>\n",
+       "      <td>17.940000</td>\n",
+       "      <td>972xx</td>\n",
+       "      <td>1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>893646.000000</td>\n",
+       "      <td>644973.000000</td>\n",
+       "      <td>42217.000000</td>\n",
+       "      <td>4048.000000</td>\n",
+       "      <td>69569.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.444413</td>\n",
+       "      <td>24.163792</td>\n",
+       "      <td>13.963949</td>\n",
+       "      <td>7.647337</td>\n",
+       "      <td>6.316612</td>\n",
+       "      <td>44.427846</td>\n",
+       "      <td>32.168502</td>\n",
+       "      <td>12.259344</td>\n",
+       "      <td>0.944561</td>\n",
+       "      <td>2.458543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 72 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     loan_amnt       dti    Zip emp_length  accepted     Population  \\\n",
+       "0  5000.000000 27.650000  860xx  10+ years         1  184274.000000   \n",
+       "1  2500.000000  1.000000  309xx   < 1 year         1  204347.000000   \n",
+       "2  2400.000000  8.720000  606xx  10+ years         1 2697610.000000   \n",
+       "3 10000.000000 20.000000  917xx  10+ years         1 1977114.000000   \n",
+       "4  3000.000000 17.940000  972xx     1 year         1  893646.000000   \n",
+       "\n",
+       "          White         Black       Native         Asian       ...        \\\n",
+       "0  85837.000000   2391.000000 64344.000000   2553.000000       ...         \n",
+       "1  91932.000000  92769.000000   283.000000   5308.000000       ...         \n",
+       "2 875093.000000 822035.000000  3193.000000 163025.000000       ...         \n",
+       "3 393027.000000  72504.000000  4702.000000 452147.000000       ...         \n",
+       "4 644973.000000  42217.000000  4048.000000  69569.000000       ...         \n",
+       "\n",
+       "   Married_couple_child_under_18_pct  Married_couple_no_child_under_18_pct  \\\n",
+       "0                          16.424996                             26.521836   \n",
+       "1                          12.838156                             24.570782   \n",
+       "2                          13.999956                             18.663649   \n",
+       "3                          24.276769                             30.612848   \n",
+       "4                          17.444413                             24.163792   \n",
+       "\n",
+       "   Single_parent_families_pct  Single_parent_child_under_18_pct  \\\n",
+       "0                   22.213048                         11.061802   \n",
+       "1                   24.387649                         12.528446   \n",
+       "2                   21.527478                         10.097242   \n",
+       "3                   23.172234                          9.575353   \n",
+       "4                   13.963949                          7.647337   \n",
+       "\n",
+       "   Single_parent_no_child_under_18_pct  Non_families_pct  \\\n",
+       "0                            11.151246         34.840119   \n",
+       "1                            11.859203         38.203412   \n",
+       "2                            11.430236         45.808917   \n",
+       "3                            13.596881         21.938149   \n",
+       "4                             6.316612         44.427846   \n",
+       "\n",
+       "   Householder_living_alone_pct  Householder_living_with_unrelated_pct  \\\n",
+       "0                     23.614910                              11.225209   \n",
+       "1                     32.716157                               5.487255   \n",
+       "2                     36.493490                               9.315426   \n",
+       "3                     17.238609                               4.699540   \n",
+       "4                     32.168502                              12.259344   \n",
+       "\n",
+       "   Occupied_pct  Household_size  \n",
+       "0      0.747368        3.169651  \n",
+       "1      0.829328        2.751666  \n",
+       "2      0.873162        2.602140  \n",
+       "3      0.948437        3.499106  \n",
+       "4      0.944561        2.458543  \n",
+       "\n",
+       "[5 rows x 72 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_df.head()"
+   ]
   }
  ],
  "metadata": {
