--- a/notebooks/Models.ipynb
+++ b/notebooks/Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {
     "hide": true
    },
@@ -20,8 +20,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.impute import MissingIndicator, SimpleImputer\n",
-    "from sklearn.metrics import accuracy_score, explained_variance_score\n",
     "pd.options.display.max_rows = 100\n",
     "pd.options.display.max_columns = 100\n",
     "pd.options.display.float_format = '{:.10f}'.format"
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {
     "hide": true
    },
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {
     "hide": true
    },
@@ -71,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1A. Outcome Features"
+    "### 1A. Variable Summary"
    ]
   },
   {
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {
     "hide": true
    },
@@ -101,15 +99,8 @@
    "source": [
     "#OUTCOME VARIABLES\n",
     "outcome_var_list = set(out_var for out_var in var_list if \"OUT_\" in out_var)\n",
-    "for i, o in enumerate(sorted(outcome_vars)):\n",
+    "for i, o in enumerate(sorted(outcome_var_list)):\n",
     "    print(\"{} {}\".format(i+1, o))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1B. Dummy Variables"
    ]
   },
   {
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {
     "hide": true
    },
@@ -159,15 +150,8 @@
    "source": [
     "#DUMMY VARIABLES\n",
     "dummy_var_list = set(dummy for dummy in var_list if \"D_\" in dummy)\n",
-    "for i, d in enumerate(sorted(dummy_vars)):\n",
+    "for i, d in enumerate(sorted(dummy_var_list)):\n",
     "    print(\"{:<2} {}\".format(i+1, d))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1C. Numeric Variables"
    ]
   },
   {
@@ -179,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {
     "hide": true,
     "scrolled": false
@@ -255,7 +239,7 @@
    "source": [
     "#NUMERIC VARIABLES\n",
     "numeric_var_list = var_list - outcome_var_list - dummy_var_list\n",
-    "for i, n in enumerate(sorted(numeric_vars)):\n",
+    "for i, n in enumerate(sorted(numeric_var_list)):\n",
     "    print(\"{:<2} {}\".format(i+1, n))"
    ]
   },
@@ -263,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1D. Train-Test Split"
+    "### 1B. Train-Test Split"
    ]
   },
   {
@@ -275,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1E. Standard Scaling"
+    "### 1C. Standard Scaling"
    ]
   },
   {
@@ -299,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,41 +293,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_vars_scaled = scaler.fit_transform(ls_train[list(numeric_var_list)])\n",
-    "train_vars_scaled = pd.DataFrame(train_vars_scaled, \n",
+    "#SCALE THE TRAINING SETS (fit_transform)\n",
+    "train_vars_scaled = pd.DataFrame(scaler.fit_transform(ls_train[list(numeric_var_list)]),\n",
     "                                 index=ls_train.index, \n",
     "                                 columns=ls_train[list(numeric_var_list)].columns)\n",
-    "ls_train_scaled = pd.concat(objs=[train_vars_scaled,\n",
-    "                                  ls_train[list(outcome_var_list)],\n",
-    "                                  ls_train[list(dummy_var_list)]],\n",
-    "                            axis=1).sort_index(axis=1)"
+    "\n",
+    "feature_train = pd.concat([train_vars_scaled, \n",
+    "                           ls_train[list(dummy_var_list)]], \n",
+    "                          axis=1).sort_index(axis=1)\n",
+    "\n",
+    "outcome_train = ls_train[list(outcome_var_list)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_vars_scaled = scaler.transform(ls_test[list(numeric_var_list)])\n",
-    "test_vars_scaled = pd.DataFrame(test_vars_scaled, \n",
+    "#STANDARDIZE THE TEST SET (transform)\n",
+    "test_vars_scaled = pd.DataFrame(scaler.transform(ls_test[list(numeric_var_list)]),\n",
     "                                index=ls_test.index, \n",
     "                                columns=ls_test[list(numeric_var_list)].columns)\n",
-    "ls_test_scaled = pd.concat(objs=[test_vars_scaled,\n",
-    "                                ls_test[list(outcome_var_list)],\n",
-    "                                ls_test[list(dummy_var_list)]],\n",
-    "                           axis=1).sort_index(axis=1)"
+    "\n",
+    "feature_test = pd.concat([test_vars_scaled, \n",
+    "                          ls_test[list(dummy_var_list)]], \n",
+    "                         axis=1).sort_index(axis=1)\n",
+    "\n",
+    "outcome_test = ls_test[list(outcome_var_list)]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classification"
+    "### 1C. Missing Value Imputation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The models we will use require that we handle the missing values in the dataset. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VARIABLE                       MISSING\n",
+      "acc_now_delinq                 0%\n",
+      "acc_open_past_24mths           12%\n",
+      "annual_inc                     0%\n",
+      "avg_cur_bal                    17%\n",
+      "bc_open_to_buy                 13%\n",
+      "bc_util                        13%\n",
+      "chargeoff_within_12_mths       0%\n",
+      "collections_12_mths_ex_med     0%\n",
+      "delinq_2yrs                    0%\n",
+      "delinq_amnt                    0%\n",
+      "earliest_cr_line               0%\n",
+      "emp_length                     5%\n",
+      "inq_last_6mths                 0%\n",
+      "mo_sin_old_il_acct             20%\n",
+      "mo_sin_old_rev_tl_op           17%\n",
+      "mo_sin_rcnt_rev_tl_op          17%\n",
+      "mo_sin_rcnt_tl                 17%\n",
+      "mort_acc                       12%\n",
+      "mths_since_last_delinq         53%\n",
+      "mths_since_last_major_derog    78%\n",
+      "mths_since_last_record         86%\n",
+      "mths_since_recent_bc           13%\n",
+      "mths_since_recent_bc_dlq       79%\n",
+      "mths_since_recent_inq          21%\n",
+      "mths_since_recent_revol_delinq 70%\n",
+      "num_accts_ever_120_pd          17%\n",
+      "num_actv_bc_tl                 17%\n",
+      "num_actv_rev_tl                17%\n",
+      "num_bc_sats                    14%\n",
+      "num_bc_tl                      17%\n",
+      "num_il_tl                      17%\n",
+      "num_op_rev_tl                  17%\n",
+      "num_rev_accts                  17%\n",
+      "num_rev_tl_bal_gt_0            17%\n",
+      "num_sats                       14%\n",
+      "num_tl_120dpd_2m               19%\n",
+      "num_tl_30dpd                   17%\n",
+      "num_tl_90g_dpd_24m             17%\n",
+      "num_tl_op_past_12m             17%\n",
+      "open_acc                       0%\n",
+      "pct_tl_nvr_dlq                 17%\n",
+      "percent_bc_gt_75               13%\n",
+      "pub_rec                        0%\n",
+      "pub_rec_bankruptcies           0%\n",
+      "revol_util                     0%\n",
+      "tax_liens                      0%\n",
+      "tot_coll_amt                   17%\n",
+      "tot_cur_bal                    17%\n",
+      "tot_hi_cred_lim                17%\n",
+      "total_acc                      0%\n",
+      "total_bal_ex_mort              12%\n",
+      "total_bc_limit                 12%\n",
+      "total_il_high_credit_limit     17%\n",
+      "total_rev_hi_lim               17%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{:<30} {}'.format('VARIABLE', 'MISSING'))\n",
+    "for var in sorted(numeric_var_list):\n",
+    "    if ls[var].isnull().sum() > 0:\n",
+    "        print('{:<30} {:.0%}'.format(var, ls[var].isnull().sum()/len(ls)))"
    ]
   },
   {
@@ -358,6 +427,189 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84036"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(outcome_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/michal/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-7a4b50aacbb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlogreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel_logreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutcome_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/logistic.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1282\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1283\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr', dtype=_dtype, order=\"C\",\n\u001b[0;32m-> 1284\u001b[0;31m                          accept_large_sparse=solver != 'liblinear')\n\u001b[0m\u001b[1;32m   1285\u001b[0m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1286\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    745\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    746\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 747\u001b[0;31m                     estimator=estimator)\n\u001b[0m\u001b[1;32m    748\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    749\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    566\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    567\u001b[0m             _assert_all_finite(array,\n\u001b[0;32m--> 568\u001b[0;31m                                allow_nan=force_all_finite == 'allow-nan')\n\u001b[0m\u001b[1;32m    569\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m     \u001b[0mshape_repr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_shape_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X, allow_nan)\u001b[0m\n\u001b[1;32m     54\u001b[0m                 not allow_nan and not np.isfinite(X).all()):\n\u001b[1;32m     55\u001b[0m             \u001b[0mtype_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'infinity'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mallow_nan\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'NaN, infinity'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg_err\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype_err\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logreg = LogisticRegression(random_state=0)\n",
+    "model_logreg = logreg.fit(feature_train, outcome_test.iloc[:,0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "826096    1\n",
+       "861888    1\n",
+       "353431    0\n",
+       "837420    0\n",
+       "383519    1\n",
+       "191341    1\n",
+       "414683    1\n",
+       "4479      1\n",
+       "242956    1\n",
+       "201355    1\n",
+       "343151    1\n",
+       "30033     0\n",
+       "860846    1\n",
+       "394910    1\n",
+       "138958    1\n",
+       "117233    1\n",
+       "422825    1\n",
+       "836949    1\n",
+       "35194     1\n",
+       "346527    1\n",
+       "273750    1\n",
+       "75694     1\n",
+       "14420     1\n",
+       "103244    1\n",
+       "203790    1\n",
+       "320556    1\n",
+       "32205     1\n",
+       "225221    1\n",
+       "204021    1\n",
+       "354487    1\n",
+       "250947    1\n",
+       "425511    1\n",
+       "46002     1\n",
+       "34269     1\n",
+       "403491    0\n",
+       "456816    1\n",
+       "838911    1\n",
+       "91856     1\n",
+       "209269    1\n",
+       "124605    1\n",
+       "164613    1\n",
+       "828790    1\n",
+       "5910      1\n",
+       "378715    1\n",
+       "220358    1\n",
+       "462001    1\n",
+       "100556    1\n",
+       "101363    1\n",
+       "45130     0\n",
+       "38938     1\n",
+       "         ..\n",
+       "396924    1\n",
+       "175172    1\n",
+       "863921    1\n",
+       "825545    1\n",
+       "110803    1\n",
+       "23545     0\n",
+       "404221    1\n",
+       "102236    1\n",
+       "85349     1\n",
+       "97780     1\n",
+       "147664    0\n",
+       "10037     1\n",
+       "11146     1\n",
+       "827718    0\n",
+       "412779    0\n",
+       "26403     1\n",
+       "23375     1\n",
+       "129976    1\n",
+       "384366    1\n",
+       "258843    1\n",
+       "199846    1\n",
+       "37901     1\n",
+       "220980    1\n",
+       "283969    1\n",
+       "335810    1\n",
+       "19326     1\n",
+       "158762    1\n",
+       "297378    1\n",
+       "198052    0\n",
+       "111007    1\n",
+       "819836    1\n",
+       "273201    0\n",
+       "302344    1\n",
+       "847887    1\n",
+       "156814    1\n",
+       "256614    0\n",
+       "881227    1\n",
+       "104929    1\n",
+       "116962    1\n",
+       "375098    1\n",
+       "283529    1\n",
+       "111082    0\n",
+       "212314    1\n",
+       "125986    1\n",
+       "33552     1\n",
+       "330145    1\n",
+       "419592    1\n",
+       "848041    1\n",
+       "197836    0\n",
+       "821625    1\n",
+       "Name: OUT_Class, Length: 84036, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
