--- a/notebooks/EthicalImplications.ipynb
+++ b/notebooks/EthicalImplications.ipynb
@@ -46,13 +46,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Census Data Description and Cleaning\n",
+    "## 3. Census Data Summary\n",
     "\n",
     "Especially when machine-generated predictions carry significant life consequences, developers and scientists have a responsibility to ensure their algorithms do not create or exacerbate societal problems through disparate outcomes and impacts on different groups.\n",
     "\n",
-    "While LendingClub does not have the demographic data associated with each loan or loan application (either they don't collect it or they just don't make it publicly available), LendingClub does share the 3-digit zip codes of the borrowers and applicants. To understand whether there is discrimination in LendingClub’s practices and ultimately our proposed investing strategy, we obtained the U.S. Census Bureau’s demographic data and leveraged these zip codes to tie high-level demographic information to the loan data. This data reports the total population and population by different demographic groups (i.e., race, income, education, sex, household structure) and other characteristics like poverty and unemployment rates by zip code. Because LendingClub data is reported at the 3-digit zip code level, we aggregated up to the 3-digit zip code level and calculated percentage of total population and percentage of total household values. We also derived some additional variables such as household size (from population and number of households) and occupied rate (from number of households and housing units). We dropped the variables related to age, as we felt that discrimination related to age is appropriate because it is highly correlated with length of credit history, a valid criterion on which loan applications should be evaluated but is not available in the LendingClub data. Post processing, our census dataset had 891 3-digit zip codes and 68 features.\n",
+    "While LendingClub does not have the demographic data associated with each loan or loan application (either they don't collect it or they just don't make it publicly available), LendingClub does share the 3-digit zip codes of the borrowers and applicants. We leveraged these zip codes to tie high-level demographic information to the loan data.\n",
     "\n",
-    "There are five records with missing data, likely originating from sparsely populated zip code areas. At least one 3-digit zip code area has a recorded population of zero. On average, the population is ~350k, with a household size of ~2.6 and a median income of $55k. For the average zip code area, the population is about evenly split between male and female, with the majority of the population White and having at least a High School education. (See **Table 1** below.)"
+    "After data processing (as described previously in the *Data Description* section), there are five records with missing data, likely originating from sparsely populated zip code areas. At least one 3-digit zip code area has a recorded population of zero. On average, the population is ~350k, with a household size of ~2.6 and a median income of $55k. For the average zip code area, the population is about evenly split between male and female, with the majority of the population White and having at least a High School education. (See **Table 1** below.)"
    ]
   },
   {
@@ -297,8 +297,8 @@
    "outputs": [],
    "source": [
     "#some processing of the accepted loan data\n",
-    "loan_cols_to_keep = ['loan_amnt', 'term', 'int_rate', 'installment', \n",
-    "                'grade', 'emp_length', 'home_ownership', 'annual_inc', 'verification_status', \n",
+    "loan_cols_to_keep = ['loan_amnt', 'term', 'int_rate', 'installment', 'grade',\n",
+    "                'sub_grade', 'emp_length', 'home_ownership', 'annual_inc', 'verification_status', \n",
     "                'zip_code', 'dti']\n",
     "accepted_df = loan_stats_df[loan_cols_to_keep]\n",
     "accepted_df['accepted'] = 1"
@@ -1195,18 +1195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "#remove 1 of each of the demographic groups to avoid perfect colinearity\n",
     "#e.g. Male_pct + Female_pct = 1\n",
     "#leave 'int_rate' out as the response\n",
-    "ols_predictors = ['loan_amnt',\n",
-    " 'funded_amnt',\n",
-    " 'funded_amnt_inv',\n",
+    "ols_predictors_int_rate = ['loan_amnt',\n",
     " 'term',\n",
-    " 'grade',\n",
     " 'sub_grade',\n",
     " 'emp_length',\n",
     " 'home_ownership',\n",
